CHATS_SIT/force-app/main/default/objects/T_ADJMT_CANCL_NOTES__c.object
<CustomObject>
    <label>Adjustment Cancellation Note</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adjustment Cancellation Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Body__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Body</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IDN_ADJMT_CANCEL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adjustment Cancellation</label>
        <referenceTo>T_ADJMT_CANCEL__c</referenceTo>
        <relationshipLabel>Adjustment Cancellation Notes</relationshipLabel>
        <relationshipName>Adjustment_Cancellation_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SUBJECT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>